--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "sqlalchemy>=2.0.0",
+    "greenlet>=3.0.0",
     "asyncpg>=0.29.0",
     "aiomysql>=0.2.0",
     "pyyaml>=6.0.1",
