--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./scripts/init_db_large.sql:/docker-entrypoint-initdb.d/init_db.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U semanticquark"]
+      test: ["CMD-SHELL", "pg_isready -U semanticquark -d semanticquark_db"]
       interval: 5s
       timeout: 5s
       retries: 5
